#172 Fixed toast width on mobile devices when zoom less than 100%

--- a/scss/_toastContainer.scss
+++ b/scss/_toastContainer.scss
@@ -35,7 +35,7 @@
 
 @media #{$rt-mobile} {
     .#{$rt-namespace}__toast-container {
-        width: 100vw;
+        width: 100%;
         padding: 0;
         left: 0;
         margin: 0;
